Added some basic config files to the "main" pbo

--- a/hemtt.toml
+++ b/hemtt.toml
@@ -7,7 +7,7 @@ files = [
 ]
 
 key_name = "{{prefix}}_{{version}}"
-authority = "{{prefix}}_{{version}}"
+authority = "{{prefix}}_{{version}}-{{git \"id 8\"}}"
 
 [header_exts]
 version= "{{git \"id 8\"}}"
