--- a/hemtt.toml
+++ b/hemtt.toml
@@ -27,8 +27,8 @@ version= "{{git \"id 8\"}}"
 # Binarizer file search compatibility
 [scripts.binarizer_link]
 steps_windows = [
-    "if not exist x\\tmtm\\pack mkdir x\\tmtm\\pack",
-    "if not exist x\\tmtm\\pack\\addons mklink /j x\\tmtm\\pack\\addons addons",
+    "if not exist tmtm\\pack mkdir tmtm\\pack",
+    "if not exist tmtm\\pack mklink /j tmtm\\pack addons",
 	"if not exist a3 mklink /j a3 include\\a3"
 ]
 
