adjusted config for new helmets, removed unused textures

--- a/addons/altyn/model.cfg
+++ b/addons/altyn/model.cfg
@@ -166,4 +166,25 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	class tmtm_altyn_visorDown: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_altyn_noVisor: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_altyn_noVisorMic: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
 };
