added k6-3 helmet, textures currently not working

--- a/addons/altyn/model.cfg
+++ b/addons/altyn/model.cfg
@@ -187,4 +187,11 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	class tmtm_k6: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
 };
