weighted chinstrap of K6-3, added Visor Down and No Visor variants

--- a/addons/altyn/model.cfg
+++ b/addons/altyn/model.cfg
@@ -194,4 +194,18 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	class tmtm_k6_visorDown: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_k6_noVisor: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
 };
