added initial version of Zenturion C1300 helmet

--- a/addons/altyn/model.cfg
+++ b/addons/altyn/model.cfg
@@ -158,7 +158,8 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
-
+	
+	// Altyn
 	class tmtm_altyn: ArmaMan{
 		sectionsInherit="";
 		sections[] = {
@@ -173,20 +174,38 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
-	class tmtm_altyn_noVisor: ArmaMan{
+	class tmtm_altyn_visorUp: ArmaMan{
 		sectionsInherit="";
 		sections[] = {
 			"camo"
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
-	class tmtm_altyn_noVisorMic: ArmaMan{
+
+	// C1300
+	class tmtm_c1300: ArmaMan{
 		sectionsInherit="";
 		sections[] = {
 			"camo"
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	class tmtm_c1300_visorDown: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_c1300_visorUp: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	
+	// K6-3
 	class tmtm_k6: ArmaMan{
 		sectionsInherit="";
 		sections[] = {
@@ -201,7 +220,7 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
-	class tmtm_k6_noVisor: ArmaMan{
+	class tmtm_k6_visorUp: ArmaMan{
 		sectionsInherit="";
 		sections[] = {
 			"camo"
