--- a/addons/headgear/model.cfg
+++ b/addons/headgear/model.cfg
@@ -204,6 +204,20 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	class tmtm_c1300_visorOnlyDown: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_c1300_visorOnlyUp: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
 	
 	// K6-3
 	class tmtm_k6: ArmaMan{
