added UI icons for all helmets, removed glasses version of faceshield, added MM14 camo to K6

--- a/addons/headgear/model.cfg
+++ b/addons/headgear/model.cfg
@@ -204,6 +204,8 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	
+	/* currently unused
 	class tmtm_c1300_visorOnlyDown: ArmaMan{
 		sectionsInherit="";
 		sections[] = {
@@ -218,6 +220,7 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	*/
 	
 	// K6-3
 	class tmtm_k6: ArmaMan{
