--- a/.github/workflows/arma.yml
+++ b/.github/workflows/arma.yml
@@ -37,10 +37,10 @@ jobs:
     steps:
     - name: Checkout the source code
       uses: actions/checkout@master
-    - name: Build using HEMTT
-      uses: arma-actions/hemtt@master
-      with:
-        command: build --release --ci
+    - name: Setup HEMTT
+      uses: arma-actions/hemtt@v1
+    - name: Run HEMTT Build
+      uses: hemtt build
     - name: Upload Artifact
       uses: actions/upload-artifact@v2-preview
       with:
