initial commit of branch, added FAST MT helmets

--- a/addons/headgear/model.cfg
+++ b/addons/headgear/model.cfg
@@ -244,4 +244,36 @@ class CfgModels
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
+	class tmtm_fast_mt: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_fast_mt_cover: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo",
+			"camoCover"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_fast_mt_headset: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo",
+			"camoHeadset"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
+	class tmtm_fast_mt_cover_headset: ArmaMan{
+		sectionsInherit="";
+		sections[] = {
+			"camo",
+			"camoHeadset",
+			"camoCover"
+		};
+		skeletonName = "OFP2_ManSkeleton";
+	};
 };
