idk what the changes are but I'm sending it because I can't be assed

--- a/addons/headgear/model.cfg
+++ b/addons/headgear/model.cfg
@@ -272,7 +272,8 @@ class CfgModels
 		sections[] = {
 			"camo",
 			"camoHeadset",
-			"camoCover"
+			"camoCover",
+			"camoPatchRight"
 		};
 		skeletonName = "OFP2_ManSkeleton";
 	};
