aegis_uniforms - separate jacket and pants selections for all m88 models

--- a/addons/aegis_uniforms/model.cfg
+++ b/addons/aegis_uniforms/model.cfg
@@ -168,8 +168,24 @@ class CfgModels
 		};
 		skeletonName = OFP2_ManSkeleton;
 	};
-	class tmtm_u_m88_early: ArmaMan{};
-	class tmtm_u_m88_early_rolled: ArmaMan{};
-	class tmtm_u_m88_early_rolled_gloves: ArmaMan{};
-	class tmtm_u_m88_early_gloves: ArmaMan{};
+	class tmtm_u_m88_early: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants" };
+	};
+	class tmtm_u_m88_early_rolled: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants" };
+	};
+	class tmtm_u_m88_early_rolled_gloves: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
+	};
+	class tmtm_u_m88_early_gloves: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
+	};
 };
