aegis_uniforms - add wool gloves mesh variant, separate tacgloves into own p3d

--- a/addons/aegis_uniforms/model.cfg
+++ b/addons/aegis_uniforms/model.cfg
@@ -178,12 +178,22 @@ class CfgModels
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants" };
 	};
+	class tmtm_u_m88_early_gloves: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
+	};
 	class tmtm_u_m88_early_rolled_gloves: ArmaMan
 	{
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
 	};
-	class tmtm_u_m88_early_gloves: ArmaMan
+	class tmtm_u_m88_early_tacgloves: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
+	};
+	class tmtm_u_m88_early_rolled_tacgloves: ArmaMan
 	{
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
