aegis_uniforms - rename meshes for m88, add leather glove variant

--- a/addons/aegis_uniforms/model.cfg
+++ b/addons/aegis_uniforms/model.cfg
@@ -178,22 +178,32 @@ class CfgModels
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants" };
 	};
-	class tmtm_u_m88_early_gloves: ArmaMan
+	class tmtm_u_m88_early_gloves_wool: ArmaMan
 	{
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
 	};
-	class tmtm_u_m88_early_rolled_gloves: ArmaMan
+	class tmtm_u_m88_early_rolled_gloves_wool: ArmaMan
 	{
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
 	};
-	class tmtm_u_m88_early_tacgloves: ArmaMan
+	class tmtm_u_m88_early_gloves_tactical: ArmaMan
 	{
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
 	};
-	class tmtm_u_m88_early_rolled_tacgloves: ArmaMan
+	class tmtm_u_m88_early_rolled_gloves_tactical: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
+	};
+	class tmtm_u_m88_early_gloves_leather: ArmaMan
+	{
+		sectionsInherit = "ArmaMan";
+		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
+	};
+	class tmtm_u_m88_early_rolled_gloves_leather: ArmaMan
 	{
 		sectionsInherit = "ArmaMan";
 		sections[] = { "camo_jacket", "camo_pants", "camo_gloves" };
