aegis_vests - add brown bra chest rig, texture pass on the rest

--- a/addons/aegis_vests/model.cfg
+++ b/addons/aegis_vests/model.cfg
@@ -160,6 +160,10 @@ class CfgModels
 	};
 
 
-	class tmtm_v_chestrig_bra: ArmaMan{};
+	class tmtm_v_chestrig_bra: ArmaMan{
+		sectionsInherit="ArmaMan";
+		sections[] = {"camo_pouches"};
+	};
+
 	class tmtm_v_belt_ammo: ArmaMan{};
 };
