aegis_vests - add type 06 LBV

--- a/addons/aegis_vests/model.cfg
+++ b/addons/aegis_vests/model.cfg
@@ -160,10 +160,15 @@ class CfgModels
 	};
 
 
-	class tmtm_v_chestrig_bra: ArmaMan{
+	class tmtm_v_chestrig_bra: ArmaMan {
 		sectionsInherit="ArmaMan";
 		sections[] = {"camo_pouches"};
 	};
 
 	class tmtm_v_belt_ammo: ArmaMan{};
+
+	class tmtm_v_lbv_type06: ArmaMan {
+		sectionsInherit="ArmaMan";
+		sections[] = {"camo_belt"};
+	};
 };
