--- a/.github/workflows/arma.yml
+++ b/.github/workflows/arma.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Run HEMTT Build
       run: hemtt build
     - name: Upload Artifact
-      uses: actions/upload-artifact@v2-preview
+      uses: actions/upload-artifact@v4
       with:
         name: tmtmpack-${{ github.sha }}-nobin
         path: releases/tmtmpack_*.zip
